k8s/manifests/deployment.yaml
#deployment file for go-web-app
apiVersion: apps/v1
kind: Deployment
metadata: 
  name: go-web-app
  labels: 
    app: go-web-app
spec:
  replicas: 1
  selector: 
    matchLabels:
      app: go-web-app
  template:
    metadata:
      labels:
        app: go-web-app
    spec:
      containers:
      - name: go-web-app
        image: sandeep530/go-web-app
        ports:
        - containerPort: 8080
